# keepassx

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  INSTALL  PROGRESS.txt  README  README.md  build_mac.sh  build_windows.sh  do-not-generate-import-library-for-executables.patch  featureRequest.md  install_on_ubuntu.sh  keepassx_install_ubuntu.md  snapcraft.yaml
cmake/: DeployQt5.cmake  FindArgon2.cmake  FindLibEvent.cmake  FindLibMicroHTTPD.cmake  FindOath.cmake
share/: CMakeLists.txt
share/icons/svg/: totp-copy.svgz
share/linux/: keepassx.appdata.xml  keepassx.desktop  keepassx.xml
share/translations/: CMakeLists.txt  keepassx_cs.ts  keepassx_da.ts  keepassx_de.ts  keepassx_el.ts  keepassx_en.ts  keepassx_es.ts  keepassx_fr.ts  keepassx_hu.ts  keepassx_id.ts  keepassx_it.ts  keepassx_it_IT.ts  keepassx_ja.ts  keepassx_ko.ts  keepassx_lt.ts  keepassx_nl_NL.ts  keepassx_pl.ts  keepassx_pt_BR.ts  keepassx_pt_PT.ts  keepassx_ru.ts  keepassx_sl_SI.ts  keepassx_sq.ts  keepassx_sv.ts  keepassx_uk.ts  keepassx_zh_CN.ts  keepassx_zh_TW.ts  update.sh
src/: CMakeLists.txt  config-keepassx.h.cmake  main.cpp  qrdev.cpp
src/QRcode/: QRCodeDialog.cpp  QRCodeDialog.h  QRCodeDialog.ui  bitstream.c  bitstream.h  libqtqrencode_global.h  mask.c  mask.h  mmask.c  mmask.h  mqrspec.c  mqrspec.h  qqrencode.cpp  qqrencode.h  qqrencode_p.h  qrencode.c  qrencode.h  qrinput.c  qrinput.h  qrspec.c  qrspec.h  rsecc.c  rsecc.h  split.c  split.h
src/autotype/: AutoType.cpp  AutoType.h  AutoTypeAction.cpp  AutoTypePlatformPlugin.h  AutoTypeSelectDialog.cpp  AutoTypeSelectDialog.h  AutoTypeSelectView.cpp  AutoTypeSelectView.h  CMakeLists.txt  ShortcutWidget.h  WindowSelectComboBox.cpp  WindowSelectComboBox.h
src/autotype/mac/: AppKitInterface.h  AppKitWrapper.h  AppKitWrapper.mm  AutoTypeMac.cpp  AutoTypeMac.h  CMakeLists.txt
src/autotype/test/: AutoTypeTest.cpp  AutoTypeTest.h  CMakeLists.txt
src/autotype/windows/: AutoTypeWindows.cpp  AutoTypeWindows.h  CMakeLists.txt
src/autotype/x11/: AutoTypeX11.cpp  AutoTypeX11.h  CMakeLists.txt
src/autotype/xcb/: AutoTypeXCB.cpp  keysymmap.py
src/core/: ArgumentParser.cpp  ArgumentParser.h  AutoTypeMatch.cpp  AutoTypeMatch.h  Config.cpp  CsvParser.cpp  CsvParser.h  Database.cpp  Database.h  Entry.cpp  Entry.h  FilePath.cpp  FilePath.h  Group.cpp  Group.h  Metadata.cpp  Metadata.h  PasswordGenerator.cpp  PasswordGenerator.h  ScreenLockListener.cpp  ScreenLockListener.h  ScreenLockListenerDBus.cpp  ScreenLockListenerDBus.h  ScreenLockListenerMac.cpp  ScreenLockListenerMac.h  ScreenLockListenerWin.cpp  ScreenLockListenerWin.h  Tools.cpp  Translator.cpp  Uuid.cpp  qsavefile.cpp
src/crypto/: Crypto.cpp  CryptoHash.cpp  CryptoHash.h  SymmetricCipher.cpp  SymmetricCipher.h  SymmetricCipherGcrypt.cpp
src/crypto/kdf/: AesKdf.cpp  AesKdf.h  Argon2Kdf.cpp  Argon2Kdf.h  Kdf.cpp  Kdf.h
src/format/: CsvReader.cpp  CsvReader.h  FirefoxPwEReader.cpp  FirefoxPwEReader.h  KeePass1Reader.cpp  KeePass2.cpp  KeePass2.h  KeePass2RandomStream.cpp  KeePass2Reader.cpp  KeePass2Reader.h  KeePass2Writer.cpp  KeePass2Writer.h  KeePass2XmlReader.cpp  KeePass2XmlReader.h  KeePass2XmlWriter.cpp  KeePass2XmlWriter.h
src/gui/: AboutDialog.h  AboutDialog.ui  Application.cpp  Application.h  ChangeMasterKeyWidget.cpp  ChangeMasterKeyWidget.h  ChangeMasterKeyWidget.ui  Clipboard.cpp  Clipboard.h  DatabaseOpenWidget.cpp  DatabaseOpenWidget.h  DatabaseOpenWidget.ui  DatabaseRepairWidget.cpp  DatabaseSettingsWidget.cpp  DatabaseSettingsWidget.h  DatabaseSettingsWidget.ui  DatabaseTabWidget.cpp  DatabaseTabWidget.h  DatabaseWidget.cpp  DatabaseWidget.h  DatabaseWidgetStateSync.cpp  DialogyWidget.cpp  DialogyWidget.h  DragTabBar.cpp  DragTabBar.h  EditWidget.cpp  EditWidget.h  EditWidgetIcons.cpp  EditWidgetIcons.h  EditWidgetProperties.h  FileDialog.cpp  FileDialog.h  FirefoxPwEOpenWidget.cpp  FirefoxPwEOpenWidget.h  IconModels.cpp  IconModels.h  KeePass1OpenWidget.cpp  LineEdit.cpp  LineEdit.h  MainWindow.cpp  (+30 more)
src/gui/csvImport/: CsvImportWidget.cpp  CsvImportWidget.h  CsvImportWizard.cpp  CsvImportWizard.h  CsvParserModel.cpp  CsvParserModel.h
src/gui/entry/: AutoTypeMatchModel.cpp  AutoTypeMatchModel.h  AutoTypeMatchView.cpp  AutoTypeMatchView.h  EditEntryWidget.cpp  EditEntryWidget.h  EditEntryWidgetMain.ui  EditEntryWidget_p.h  EntryHistoryModel.cpp  EntryModel.cpp  EntryModel.h  EntryView.cpp  EntryView.h  TOTPSettings.cpp  TOTPSettings.h  TOTPSettings.ui
src/gui/group/: EditGroupWidget.cpp  EditGroupWidget.h  EditGroupWidgetMain.ui  GroupView.cpp  GroupView.h
src/http/: AccessControlDialog.h  HttpServer.cpp  HttpServer.h  HttpSettings.cpp  OptionDialog.h  OptionDialog.ui  Protocol.cpp  Protocol.h  Request.cpp  Request.h  Response.cpp  Response.h  ResponseEntry.cpp  ResponseEntry.h  Server.cpp  Server.h  Service.cpp  Service.h
src/keys/: CompositeKey.cpp  CompositeKey.h  CompositeKey_p.h  FileKey.cpp  LibsecretKey.cpp  LibsecretKey.h
src/secrets/: Secret.cpp  Secret.h  SecretService.cpp  SecretService.h
src/secrets/adaptors/: SecretServiceAdaptor.cpp  SecretServiceAdaptor.h
src/streams/: HmacBlockStream.cpp  HmacBlockStream.h
tests/: CMakeLists.txt  TestArgumentParser.cpp  TestAutoType.cpp  TestAutoType.h  TestCryptoHash.cpp  TestCsvParser.cpp  TestCsvParser.h  TestEntry.cpp  TestEntryModel.cpp  TestGroup.cpp  TestHashedBlockStream.cpp  TestKeePass1Reader.cpp  TestKeePass2Writer.cpp  TestKeePass2XmlReader.cpp  TestKeys.cpp  TestQCommandLineParser.cpp  TestQSaveFile.cpp  TestRandom.cpp  TestSymmetricCipher.cpp  modeltest.cpp
tests/data/: EmptyUuids.xml  HttpDatabase.kdbx
tests/gui/: CMakeLists.txt  TestAutoTypeSelectViewConfig.cpp  TestAutoTypeSelectViewConfig.h  TestEntryViewConfig.cpp  TestEntryViewConfig.h  TestGui.cpp  TestHeaderConfig.cpp  TestHeaderConfig.h
tests/http/: CMakeLists.txt  HttpUtil.cpp  HttpUtil.h  TestHttpServer.cpp  TestHttpServer.h  TestRequest.cpp  TestRequest.h  TestResponse.cpp  TestResponse.h  TestServer.cpp  TestServer.h  TestService.cpp  TestService.h
utils/: CMakeLists.txt
