if(Q_WS_X11)
  find_package(X11)
  if(PRINT_SUMMARY)
    add_feature_info(libXtest X11_XTest_FOUND "The X11 XTEST Protocol library is required for auto-type")
  endif()

  if(X11_FOUND AND X11_XTest_FOUND)
    if (WITH_QT5 AND NOT Qt5Core_VERSION_STRING VERSION_LESS 5.1.0)
      add_subdirectory(x11)
    endif ()
  endif()
endif()

if(WITH_TESTS)
  add_subdirectory(test)
endif()
